Jar file manifest improvements - avoid warnings in java24